--- a/css/component.css
+++ b/css/component.css
@@ -139,11 +139,11 @@
 }
 
 .demo-2 body {
-	background: #e74c3c;
+	background: #00313b;
 }
 
 .demo-2 .grid figcaption h2 {
-	color: #e74c3c;
+	color: #00313b;
 }
 
 .demo-2 .grid figcaption p {
