--- a/who_am_i/css/style.css
+++ b/who_am_i/css/style.css
@@ -1,7 +1,7 @@
 body{
 	background: #f0f0f0 url(../images/smooth_wall.jpg) repeat top left;
 	font-family: 'Bangers', Georgia, serif;
-	color: #291908;
+	color: #a9fff4;
 }
 h1{
 	color: #fff;
@@ -23,9 +23,9 @@ h1{
 	margin: 20px;
 }
 .letter-container h2 a{
-	font-size: 140px;  
+	font-size: 90px;  
 	display: block;
-	width: 657px;
+	width: 332px;
 	margin: 0 auto;
 	clear: both;
 }
@@ -50,7 +50,7 @@ h1{
 	background-size: 100%;
 }
 .letter-container h2 a span{
-	color: #00313b;
+	color: #47032c;
 	float:left;
 	position: relative;
 	z-index: 100;
@@ -61,7 +61,7 @@ h1{
 	transition: all 0.3s ease-in-out;
 	text-shadow:  
 	  0px -1px 3px #a9fff4, 
-	  0 4px 3px #291908, 
+	  0 4px 3px #ffd9df, 
 	  2px 15px 5px rgba(0, 0, 0, 0.2), 
 	  1px 20px 10px rgba(0, 0, 0, 0.3);
 }
@@ -72,4 +72,20 @@ h1{
 	  0px -1px 3px #cb4aba, 
 	  0 4px 3px #934589, 
 	  1px 1px 10px rgba(0, 0, 0, 0.2);
+}
+
+#photo {
+	background: url(../images/me.jpg);
+}
+
+#photo:hover {
+	background: url(../images/me_light.jpg);
+}
+
+#photo, #photo:hover {
+	margin: auto;
+	width: 223px;
+	height: 260px;
+	border: 1px solid black;
+	border-radius: 180px;
 }
